--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,120 @@
 body{
-    background-color: lightblue; 
+    background-color: #ffffff; 
+    color: #00274C; 
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h1{
-    font-size: 15px; 
-    font-family: 'Courier New';
+    font-size: 50px; 
+    font-family:'Times New Roman', Times, serif; 
+    font-weight: bolder;
     text-align: center; 
 }
 
 h2{
-    font-size: 15px; 
-    font-family: 'Courier New';
-    color: red;
+    font-size: 25px; 
+    font-family: 'Times New Roman', Times, serif; 
+    font-weight: bold; 
+    color: #00274C;
 }
 
 h3{
-    font-size: 12px; 
-    font-family: 'Courier New', Courier monospace;
-    color: red;
+    font-size: 15px; 
+    font-family: 'Times New Roman', Times, serif; 
+    color: #00274C;
+    font-weight: bold;
 }
 
 p{
     line-height: 20px;
 }
 
-img{
-    border: 5px solid green; 
 
+footer {
+    background-color: #00274C; 
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 14px;
 }
 
-.active{
-
+header {
+    background-color: #00274C;
+    color: #ffffff;
 }
 
 .skip {
-    
+    position: absolute;
+    top: -40px; 
+    left: 0;
+    background-color: #004182; 
+    color: white;
+    padding: 10px;
+    text-decoration: solid; 
 }
+
+.skip:focus {
+    top: 10px;
+    outline: 5px solid #00B2A9; 
+}
+
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    gap: 20px; 
+    justify-content: center;
+
+}
+
+nav ul li a {
+    color: #ffffff; 
+    text-decoration: none;
+    padding: 5px;
+}
+
+nav ul li a:hover {
+    color: #ffffff;
+    background-color: #FFCB05; 
+    font-weight: bold;
+    padding: 5px 5px;
+}
+
+nav ul li a:focus {
+    outline: 3px solid #00B2A9; 
+    font-weight: bold;  
+    padding: 10px 10px;
+}
+
+nav ul li a.active{
+    color: #FFFFFF; 
+    background-color: #004182; 
+    font-weight: bold;
+    border: 2px solid #FFCB05;
+    border-radius: 5px;
+}
+
+.main {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px; 
+    margin: 20px; 
+}
+
+
+.content-one {
+    grid-column: 1 / -1; 
+}
+
+.content-two {
+    grid-column: 1 / -1; 
+}
+
+.content-three {
+    grid-column: 1 / -1; 
+}
+
+figure {
+    grid-column: 1 / -1; 
+    text-align: center;
+}
+
